# ParaCL

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  lexer.l  parser.y
.github/workflows/: workflow.yml
cmake/: defaults.cmake  third_party.cmake
examples/: assignment_and_print.pcl  basic_example.pcl  big_if.pcl  factorial.pcl  fib.pcl  if.pcl  if_and_decl.pcl  if_and_logical.pcl  if_and_not.pcl  if_with_and.pcl  minus_minus.pcl  modulus.pcl  nested_if.pcl  print_and_aithm.pcl  print_and_arithm.pcl  priority.pcl  priority2.pcl  priority3.pcl  priority4.pcl  ques.pcl  scopes.pcl  scopes2.pcl  sum.pcl  unary_minus.pcl  vars_and_arithm.pcl  while.pcl  while_and_input.pcl
graphviz/: graph.dot
include/: ast.hpp  caclulator.hpp  calculator.hpp  driver.hpp  entity_table.hpp  interpreter.hpp  node_visitor.hpp  simulator.hpp  tree.hpp
include/graph_dump/: graph_dump.hpp
include/interpreter/: entity_table.hpp  interpreter.hpp
include/parser/: ast.hpp  driver.hpp  lexer.hpp  node_visitor.hpp
source/: ast.cpp  driver.cpp  interpreter.cpp  main.cpp
source/graph_dump/: CMakeLists.txt  graph_dump.cpp
source/interpreter/: CMakeLists.txt  interpreter.cpp
source/parser/: CMakeLists.txt  ast.cpp  lexer.l  parser.y
tests/: CMakeLists.txt
tests/end_to_end/: ete_runner.py  examples_runner.sh
tests/end_to_end/answers/: assignment_and_print.pcl.out  print_and_arithm.pcl.out  print_and_arithm.pcl.out 
tests/unit/: unit_tests.cpp
